--- a/default.hbs
+++ b/default.hbs
@@ -27,30 +27,24 @@
 
     <div id="wrapper">
         <header class="site-header">
+          <img class="header_bg" src="http://bkps.co/content/images/2016/06/paranormalsociety-rect-black.png" width="809px" height="333px">
             <div class="container">
-                <div class="site-title-wrapper">
-                    {{#if @blog.logo}}
-                        <a class="site-logo js-ajax-link" title="{{@blog.title}}" href="{{@blog.url}}"><img src="{{@blog.logo}}" alt="{{@blog.title}}" /></a>
-                    {{else}}
-                        <h1 class="site-title"><a class="js-ajax-link" title="{{@blog.title}}" href="{{@blog.url}}">{{@blog.title}}</a></h1>
-
-                        <a class="button-square" href="{{@blog.url}}/rss"><i class="fa fa-rss"></i></a>
-                    {{/if}}
-                </div>
-
                 <ul class="site-nav">
-                    <li class="site-nav-item"><a class="js-ajax-link" title="{{@blog.title}}" href="{{@blog.url}}">Latest Post</a></li>
-                    <li class="site-nav-item"><a class="js-ajax-link js-show-index" title="{{@blog.title}}" href="{{@blog.url}}">Browse Posts</a></li>
-
-                    {{navigation}}
-
-                    {{#if @blog.logo}}
-                        <li class="site-nav-item"><a href="{{@blog.url}}/rss">RSS</a></li>
-                    {{/if}}
+                    <li class="site-nav-item">
+                      <a class="js-ajax-link" title="Home | The Brooklyn Paranormal Society" href="http://bkps.co/">Home</a>
+                    </li>
+                    <li class="site-nav-item">
+                      <a title="Join Us | The Brooklyn Paranormal Society" href="http://meetup.com/Brooklyn-Paranormal-Society/" target="_blank">Join Us</a>
+                    </li>
+                    <li class="site-nav-item">
+                      <a class="js-ajax-link" title="About | The Brooklyn Paranormal Society" href="/about">About</a>
+                    </li>
+                    <li class="site-nav-item">
+                      <a title="Contact | The Brooklyn Paranormal Society" href="mailto:info@bkps.co" target="_blank">Contact</a>
+                    </li>
                 </ul>
             </div>
         </header>
-    
         <div id="ajax-container">
             {{{body}}}
         </div>
@@ -64,7 +58,7 @@
                 <a class="button-square button-jump-top js-jump-top" href="#"><i class="fa fa-angle-up"></i></a>
             </div>
 
-            <p class="footer-copyright">&copy; {{date format="YYYY"}} / Published with <a href="https://ghost.org">Ghost</a> / <a href="https://github.com/roryg/ghostwriter">Ghostwriter theme</a> By <a href="http://jollygoodthemes.com">JollyGoodThemes</a></p>
+            <p class="footer-copyright">&copy; {{date format="YYYY"}}</p>
         </div>
     </footer>
 
