--- a/page.hbs
+++ b/page.hbs
@@ -3,7 +3,7 @@
 <div class="container">
     {{#post}}
         <article class="post-container {{post_class}}">
-            <header class="post-header">
+            <!-- <header class="post-header"> -->
                 <h1 class="post-title">{{title}}</h1>
 
                 <p class="blog-description">{{@blog.description}}</p>
