Sleeking it up.

--- a/default.hbs
+++ b/default.hbs
@@ -27,7 +27,6 @@
 
     <div id="wrapper">
         <header class="site-header">
-          <img class="header_bg" src="http://bkps.co/content/images/2016/06/paranormalsociety-rect-black.png" width="809px" height="333px">
             <div class="container">
                 <ul class="site-nav">
                     <li class="site-nav-item">
@@ -45,6 +44,7 @@
                 </ul>
             </div>
         </header>
+        <div id="masthead" class="masthead"></div>
         <div id="ajax-container">
             {{{body}}}
         </div>
