--- a/partials/post-content.hbs
+++ b/partials/post-content.hbs
@@ -1,8 +1,8 @@
+<div class="slogan">On July 16th, The Brooklyn Paranormal Society presents:</div>
 <article class="post-container {{post_class}}">
     <header class="post-header">
         <h1 class="post-title">{{title}}</h1>
-
-        <p class="post-date">Published <time datetime="{{published_at}}">{{date format="MMMM Do YYYY"}}</time> <strong>by {{author}}</strong></p>
+        <!--<p class="post-date">Published <time datetime="{{published_at}}">{{date format="MMMM Do YYYY"}}</time> <strong>by {{author}}</strong></p>-->
     </header>
 
     <div class="post-content clearfix">
