--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -182,6 +182,27 @@ table {
       padding-top: 5px;
     }
 
+.slogan {
+    color: #AEADAD;
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 1;
+    margin: 25px 0 0;
+    /* margin: 0 auto; */
+    position: relative;
+    left: 33.3%;
+}
+
+.masthead {
+    background-image: url(http://bkps.co/content/images/2016/06/paranormalsociety-rect-black.png);
+    height: 225px;
+    display: block;
+    background-size: 580px 220px;
+    background-repeat: no-repeat;
+    position: relative;
+    left: 25%;
+}
+
 /* ============================================================ */
 /* Site Header */
 /* ============================================================ */
@@ -238,7 +259,6 @@ table {
 .post-header {
   border-bottom: 6px solid #303030;
   margin: 0 0 50px;
-  padding: 0 0 80px;
   text-align: center;
   text-transform: uppercase; }
 
