--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -196,11 +196,10 @@ table {
 .masthead {
     background-image: url(http://bkps.co/content/images/2016/06/paranormalsociety-rect-black.png);
     height: 225px;
-    display: block;
+    /* display: block; */
     background-size: 580px 220px;
     background-repeat: no-repeat;
-    position: relative;
-    left: 25%;
+    background-position: center;
 }
 
 /* ============================================================ */
@@ -236,8 +235,8 @@ table {
 
 .site-nav {
   list-style: none;
-  margin: 28px 0 10px;
-  padding-left:	0px; }
+  margin: 15px 0 8px;
+  padding-left: 0px; }
 
 .site-nav-item {
   display: inline-block;
